objects/InsurancePolicy.object
<CustomObject>
    <fields>
        <fullName>CMN_PaidUpBenefitIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for integration to populate Paid Up Benefit Indicator from source systems (Compass/Lifestyle).</description>
        <label>Paid Up Benefit Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_PaidUpDeathValue__c</fullName>
        <description>Used for integration to populate Paid Up Death Value from source systems (Compass/Lifestyle).</description>
        <label>Paid Up Death Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_PaidUpPremiumAmount__c</fullName>
        <description>Used for integration to populate Paid Up Premium Amount from source systems (Compass/Lifestyle).</description>
        <label>Paid Up Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_PayPointNumber__c</fullName>
        <description>Used for integration to populate Pay Point Number for Stop Orders from source systems (Compass/Lifestyle)</description>
        <label>Pay Point Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_PolicySourceSystem__c</fullName>
        <description>Used for integration to populate the specific source system (Compass/Lifestyle).</description>
        <label>Policy Source System</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_PremiumReceivedIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for integration to populate Premium Received Indicator from source systems (Compass/Lifestyle).</description>
        <label>Premium Received Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_ProductName__c</fullName>
        <description>Used for integration to populate Product Name from source systems (Compass/Lifestyle).</description>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_PrototypeCode__c</fullName>
        <description>Used for integration to populate Prototype Code from source systems (Compass/Lifestyle).</description>
        <label>Prototype Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_QualifyingAddlibIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for integration to populate Qualifying Addlib Indicator from source systems (Compass/Lifestyle).</description>
        <label>Qualifying Addlib Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_RefundAvailableAmount__c</fullName>
        <description>Used for integration to populate Refund Available Amount from source systems (Compass/Lifestyle).</description>
        <label>Refund Available Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_RepayableAmount__c</fullName>
        <description>Used for integration to populate Repayable Amount from source systems (Compass/Lifestyle)</description>
        <label>Repayable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_RestrictionEndDate__c</fullName>
        <description>Used for integration to populate Restriction End Date from source systems (Compass/Lifestyle).</description>
        <label>Restriction End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_SwitchedValue__c</fullName>
        <description>Used for integration to populate Switched Value from source systems (Compass/Lifestyle)</description>
        <label>Switched value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_SystematicRedemptionPaymentIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for integration to populate Systematic Redemption Payment Indicator from source systems (Compass/Lifestyle)</description>
        <label>Systematic Redemption Payment Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_TermIllustrativeValue__c</fullName>
        <description>Used for integration to populate Term Illustrative Value from source systems (Compass/Lifestyle).</description>
        <label>Term Illustrative Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_TotalInvestmentAmount__c</fullName>
        <description>Used for integration to populate Total Investment Amount from source systems (Compass/Lifestyle).</description>
        <label>Total Investment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_TotalPackageDeathValue__c</fullName>
        <description>Used for integration to populate Total Package Death Value from source systems (Compass/Lifestyle).</description>
        <label>Total Package Death Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_TotalRepayableAmount__c</fullName>
        <description>Used for integration to populate Total Repayable Amount from source systems (Compass/Lifestyle).</description>
        <label>Total Repayable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Insurance Policies</relationshipLabel>
        <relationshipName>HouseholdInsurancePolicies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SC_ActiveConsultantCount__c</fullName>
        <description>Indicates the total number of active consultants associated with insurance policy</description>
        <label>Active Consultant Count</label>
        <summaryFilterItems>
            <field>InsurancePolicyParticipant.SC_ConsultantStatus__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>InsurancePolicyParticipant.InsurancePolicyId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SC_ConsultantStatus__c</fullName>
        <description>Indicates whether the Insurance policy is Intermediated or orphan.</description>
        <formula>IF
(
SC_ActiveConsultantCount__c &gt; 0,
&apos;Intermediated&apos;,
&apos;Orphan&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Status</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AW_InsurancePoliciesInForce</fullName>
        <columns>PolicyName</columns>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>PremiumAmount</columns>
        <columns>AW_RD_CommencementDateTime__c</columns>
        <columns>NameInsured</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>IN FORCE</value>
        </filters>
        <label>Insurance Policies - In Force</label>
        <sharedTo>
            <roleAndSubordinatesInternal>AW_ZA_Retail_GroupExecutiveClientandAdviserExperience</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AW_InsurancePoliciesOutOfForce</fullName>
        <columns>PolicyName</columns>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>PremiumAmount</columns>
        <columns>AW_RD_CommencementDateTime__c</columns>
        <columns>NameInsured</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>notEqual</operation>
            <value>IN FORCE</value>
        </filters>
        <label>Insurance Policies - Out of Force</label>
        <sharedTo>
            <roleAndSubordinatesInternal>AW_ZA_Retail_GroupExecutiveClientandAdviserExperience</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_InsurancePolicies</fullName>
        <columns>Name</columns>
        <columns>PolicyName</columns>
        <columns>AW_RD_CommencementDateTime__c</columns>
        <columns>Status</columns>
        <columns>PremiumAmount</columns>
        <columns>CMN_PaidToDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Insurance Policies</label>
        <sharedTo>
            <roleAndSubordinatesInternal>AW_ZA_Retail_GroupExecutiveClientandAdviserExperience</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RSC_AllInsurancePolicies</fullName>
        <columns>Name</columns>
        <columns>PolicyName</columns>
        <columns>AW_CommencementDate__c</columns>
        <columns>Status</columns>
        <columns>PremiumAmount</columns>
        <columns>PaidToDate</columns>
        <filterScope>Everything</filterScope>
        <label>All Insurance Policies</label>
        <sharedTo>
            <roleAndSubordinatesInternal>RSC_ZA_Retail_ClientandAdviserServiceCentre</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>AW_FNA_Policy</fullName>
        <active>true</active>
        <description>Record type used for FNA Policies sync.</description>
        <label>FNA Policy</label>
    </recordTypes>
    <recordTypes>
        <fullName>AW_InsurancePolicy</fullName>
        <active>true</active>
        <description>Record type used for mulesoft integration, Liberty Compass, Lifestyle and Ilanga.</description>
        <label>Insurance Policy</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>